worked on textures, worked on models, added the RiverShell, because every mod needs a mascot, worked on the PowerCells